# Klikbox-FTP-Client

./: .gitignore  Cargo.toml
DotNetClient/: DotNetClient.sln
DotNetClient/DotNetClient/: DotNetClient.csproj  Program.cs  appsettings.json
src/: main.rs
test-server/: Dockerfile  build.bat  run.bat
test-server/source/: script.sh  vsftpd.conf
