[package]
name = "klikbox-ftp-client"
version = "0.1.0"
authors = ["Peter Verswyvelen <bugfact@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = "3.0.1"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
